[ANCHOR-622][3/3] Migrate ClientsConfig usage (#1393)
### Description

Migrate the usage in:
- SEP10
- SEP31
- EventProcessor
- ClientStatusCallbackHandler

Clean up the deprecated files

### Testing

- `./gradlew test`ber to this PR